@@ -1,4 +1,5 @@
 Adminer dev:
+PostgreSQL: Display auto_increment of inserted rows
 
 Adminer 5.0.6 (released 2025-03-17):
 Align numbers right (bug #912)
